# yadisk-duplicate

./: CMakeLists.txt  CPackConfig.cmake  README.md  yadisk-duplicate.cpp
docs/: doxygen.conf
sources/: yadisk-duplicate.cpp
